<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bookmarks"
        android:icon="@drawable/ic_baseline_bookmarks_24"
        android:title="@string/bookmarks"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/last_command"
        android:icon="@drawable/ic_baseline_restore_24dp"
        android:title="@string/last_command"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="withText" />
    <item
        android:id="@+id/clear"
        android:icon="@drawable/ic_baseline_clear_24"
        android:title="@string/clear"
        android:visible="false"
        app:showAsAction="withText" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/help"
        android:visible="false"
        app:showAsAction="withText" />
    <item
        android:id="@+id/reset"
        android:title="@string/reset_title"
        app:showAsAction="withText"
        android:icon="@drawable/ic_baseline_help_24" />
</menu>